tests/test_files/invalid/syntax/task_invalid_task_name.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Task 5123123not_an_identifier
    Transport
    From tosWarehouse1
    To tosProduction1
End
